# ot-harjoitustyo

./: .coveragerc  README.md  pyproject.toml  tasks.py
dokumentaatio/: arkkitehtuuri.md  changelog.md  kayttoohje.md  testaus.md  tuntikirjanpito.md  vaatimusmaarittely.md
laskarit/viikko1/: gitlog.txt  komentorivi.txt
laskarit/viikko2/: pyproject.toml
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
python-sudoku/: README.md
python-sudoku/dokumentaatio/: tuntikirjanpito.md  vaatimusmaarittely.md
src/: Sudoku.py  game_loop.py  main.py  sudoku.py
src/repositories/: score_repository.py
src/services/: game_loop.py
src/tests/: sudoku_test.py
src/tests/repositories/: score_repository_test.py
src/tests/services/: sudoku_test.py
src/ui/: button.py  hello_view.py  login_view.py  menu.py  register_view.py  textbox.py  ui.py
